Cards grid is done, no visible bugs

--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,6 @@
   align-items: center;
 }
 
+.icon {
+  width: 100px;
+}
